Edit:  Completed Solution ILT.C27 (Duncan Bennett)
Edit:  About 130 line-break adjustments, for 5 inch text width at 10pt
Edit:  Edits, Subsection CB.CELT
Edit:  Solution SLT.C29, added solution to surjective question (Dan Messenger)
Edit:  Removed two forward references to Chapter MD (Aidam Meacham)
Edit:  Proof of Theorem NME7 clarified (Kevin Halasz)
Change:  Replaced Definition RR by an informal discussion
Change:  Definition TSVS renamed as Definition SSVS
Change:  Proof Technique D: discussion about definitions as nouns, adjectives
Change:  Subsection PD.DS (Direct Sums) removed, now in second volume
Change:  Subsection MM.PMM, before Theorem MMIP, conjugate fixed to reflect theorem (Dave Perkins)
Change:  Solution SLT.C25 no longer uses rank of a linear transformation (Becca Ebert)
Change:  Proof of Theorem OD rewritten
Change:  Theorem UTMR, proof changed to remove dependence on direct sums (Tyler Ueltschi)
Typo:  Proof of Theorem SLSLC: Doubled text macro in source (Glenna Toomey)
Typo:  Solution S.T30: Corrected bolding on 'Proof' (Glenna Toomey)
Typo:  LaTeX/XML formatting in Solutions RREF.C11, RREF.C13, RREF.C16 (Caden Robinson)
Typo:  LaTeX/XML formatting in Solutions SSLE.M10, LISS.C21, B.C11 (Caden Robinson)
Typo:  Exercise TSS.T20, fixed link to notation (Caden Robinson)
Typo:  Spelling and grammar, Annotated Acronyms VS (Nick Butterfield)
Typo:  LaTeX/XML formatting, Proof of SLSLC, discussion after VSPCV
Typo:  Several LS(A,b) without bold  b  vector (Sophie Bartolomeo)
Typo:  Sign change deep in Example SSP (Dan Messenger)
Typo:  LaTeX/XML formatting in Exercises MISLE.C41, MINM.C40 (Caden Robinson)
Typo:  LaTeX/XML formatting in Exercise VS.M12 (Ameneh McCullough)
Typo:  Removed bad forward reference in Exercise LISS.C21 (Tyler Ueltschi)
Typo:  LaTeX/XML formatting in Exercises LISS.T50, D.M20 (Becca Ebert)
Typo:  Grammar in proof of Theorem TSS (Frankie de Lavis)
Typo:  Spelling in Preface "eigenvvectors"