@@ -365,7 +365,10 @@ r(x)=\frac{1}{4}x^2+x-\frac{5}{4}
 </proof>
 </theorem>
 
-<p>The theorems above have a similar style to them, a style you should consider using when confronted with a need to prove a theorem about eigenvalues and eigenvectors.  So far we have been able to reserve the characteristic polynomial for strictly computational purposes.  However, the next theorem, whose statement resembles the preceding theorems, has an easier proof if we employ the characteristic polynomial and results about determinants.</p>
+<p>The proofs of the theorems above have a similar style to them.  They all begin by grabbing an eigenvalue-eigenvector pair and adjusting it in some way to reach the desired conclusion.  You should add this to your toolkit as a general approach to proving theorems about eigenvalues.</p>
+
+<p>So far we have been able to reserve the characteristic polynomial for strictly computational purposes.  However, sometimes a theorem about eigenvalues can be proved easily by employing the characteristic polynomial (rather than using an eigenvalue-eigenvector pair).  The next theorem is an example of this.</p>
+
 
 <theorem acro="ETM" index="eigenvalues!transpose">
 <title>Eigenvalues of the Transpose of a Matrix</title>
