@@ -22,6 +22,7 @@ Edit:  Edits, Subsection CB.CELT
 Edit:  Solution SLT.C29, added solution to surjective question (Dan Messenger)
 Edit:  Removed two forward references to Chapter MD (Aidam Meacham)
 Edit:  Proof of Theorem NME7 clarified (Kevin Halasz)
+Edit:  Rewrote discussion between Theorem EIM and Theorem ETM (Kevin Halasz)
 Change:  Replaced Definition RR by an informal discussion
 Change:  Definition TSVS renamed as Definition SSVS
 Change:  Proof Technique D: discussion about definitions as nouns, adjectives
